--- a/multipleChoice.css
+++ b/multipleChoice.css
@@ -3,26 +3,15 @@ body {
 	font-family: "Helvetica Neue", "Arial", "Helvetica", "Verdana", sans-serif;
 }
 
-#status {
-	background-color: #FFF090;
-	border-bottom: solid black 1px;
-}
-#score {
-	display: none;
-	float: right;
-	font-size: 56pt;
-}
-#timer {
+.plugin {
 	display: none;
 	float: right;
 	font-size: 56pt;
 }
 
-#question {
-	display: inline;
-	width: 120px;
-	font-size: 50pt;
-	text-align: center;
+#status {
+	background-color: #FFF090;
+	border-bottom: solid black 1px;
 }
 
 #config {
@@ -30,6 +19,10 @@ body {
 	float: right;
 	margin-top: 5px;
 	position: absolute;
+}
+
+#config > a {
+	float: right;
 }
 
 .awesome {
@@ -50,6 +43,7 @@ body {
 	border: none;
 	margin: 5px;
 	text-align: center;
+	white-space: nowrap;
 }
 
 #choices {
