--- a/multipleChoice.css
+++ b/multipleChoice.css
@@ -26,7 +26,7 @@ body {
 }
 
 .awesome {
-	font-size: 28pt;
+	font-size: 14pt;
 	background: #222 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAyCAYAAACd+7GKAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAClJREFUeNpi/v//vwMTAwPDfzjBgMpFI/7hFSOT9Y8qRuF3JLoHAQIMAHYtMmRA+CugAAAAAElFTkSuQmCC) repeat-x;
 	display: inline-block; 
 	padding: 5px 10px 6px; 
@@ -60,11 +60,12 @@ body {
 }
 
 .option {
-	line-height: 76pt;
+	line-height: 70pt;
 	text-align: center;
 	font-size: 56pt; 
 	text-align: center;
-	float: right;
+	margin:0 auto;
+	display: block;
 }
 
 .hint {
