--- a/multipleChoice.css
+++ b/multipleChoice.css
@@ -48,3 +48,11 @@ body {
 	width: 775px;
 	float: left;
 }
+
+#choices > .choice {
+	border: solid black 1px;
+	border-radius: 8px 8px 8px 8px;
+	box-shadow: 3px 3px 0 0;
+	margin: 10px;
+	padding: 5px;
+}
