--- a/multipleChoice.css
+++ b/multipleChoice.css
@@ -34,7 +34,8 @@ body {
 	line-height: 1; 
 	border-radius: 5px; 
 	box-shadow: 0 1px 3px rgba(0,0,0,0.5); 
-	text-shadow: 0 -1px 1px rgba(0,0,0,0.25); 
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5); 
+	-webkit-text-shadow: 0 -1px 1px rgba(0,0,0,0.25); 
 	border-bottom: 1px solid rgba(0,0,0,0.25);
 	position: relative; 
 	cursor: pointer;
@@ -53,6 +54,7 @@ body {
 	border: solid black 1px;
 	border-radius: 8px 8px 8px 8px;
 	box-shadow: 3px 3px 0 0;
+	-webkit-box-shadow: 3px 3px 0 0;
 	margin: 10px;
 	padding: 5px;
 }
