--- a/hiragana.css
+++ b/hiragana.css
@@ -3,41 +3,63 @@ body {
 	font-family: "Helvetica Neue", "Arial", "Helvetica", "Verdana", sans-serif;
 }
 
-table {
-	border-bottom: solid black 1px;
+.progressWrapper {
+	background: #202020;
+	height: 18px;
+	position: absolute;
+	width: 45px;
+	border-radius: 6px;
+	opacity: 0.5;
 }
 
-#status {
-	background-color: #FFF090;
-	border-bottom: solid black 1px;
+.progress {
+	width: 22px;
+	border-radius: 6px 2px 2px 6px;
+	background: green;
+	height: 14px;
+	margin: 2px;
 }
 
 .choice {
-	height: 55px;
+	height: 65px;
 	width: 45px;
 	cursor: default;
 	margin: 0;
 	padding: 0;
 	display: inline-block;
-}
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+       -moz-user-select: none;
+       -ms-user-select: none;
+       -o-user-select: none;
+       user-select: none;
 
-table .choice {
-	border-top: solid black 1px;
 }
 
 .option {
-	line-height: 160%;
+	line-height: 185%;
 	text-align: right;
 	font-size: 34pt; 
 	text-align: center;
 	margin:0 auto;
+       -webkit-user-select: none;
+       -khtml-user-select: none;
+       -moz-user-select: none;
+       -ms-user-select: none;
+       -o-user-select: none;
+       user-select: none;
 }
 
 .hint {
 	position: absolute;
 	font-size: 10pt;
-	line-height: 20px;
-	margin-left: 1px;
+	line-height: 16px;
+	margin-left: 2px;
 	color: #b2b2b2;
-	display: none;
+}
+
+.status {
+	background-color: 'red';
+	height: 20px;
+	position: absolute;
 }
