--- a/multipleChoice.css
+++ b/multipleChoice.css
@@ -50,7 +50,9 @@ body {
 	float: left;
 }
 
-#choices > .choice {
+.choice {
+	height: 60px;
+	width: 50px;
 	border: solid black 1px;
 	border-radius: 8px 8px 8px 8px;
 	box-shadow: 3px 3px 0 0;
