--- a/multipleChoice.css
+++ b/multipleChoice.css
@@ -12,6 +12,7 @@ body {
 #status {
 	background-color: #FFF090;
 	border-bottom: solid black 1px;
+	height: 40px;
 }
 
 .config {
@@ -59,4 +60,12 @@ body {
 	-webkit-box-shadow: 3px 3px 0 0;
 	margin: 10px;
 	padding: 5px;
+}
+
+#questions {
+	float: left;
+}
+
+#incorrectAnswers {
+	float: right;
 }
