--- a/multipleChoice.css
+++ b/multipleChoice.css
@@ -56,7 +56,7 @@ body {
 	width: 50px;
 	border: solid black 1px;
 	border-radius: 8px 8px 8px 8px;
-	box-shadow: 3px 3px 0 0;
+	box-shadow: 2px 2px 0 0 #b0b0b0;
 	-webkit-box-shadow: 3px 3px 0 0;
 	margin: 10px;
 	padding: 5px;
